2007-12-23  Dmitry Xmelkov  <dmix@gmail.ru>

	Fix bug #21872: __floatunsisf/undisf incorrectly named
	* libm/fplib/floatsisf.S: Rename __floatunssisf --> __floatunsisf
	* libc/stdlib/strtod.c: Ditto. Add the preprocessing to exclude
	manual conversion with GCC >= 4.2
	* libm/fplib/floatunsdisf.S: Move to floatundisf.S .
	* libm/fplib/floatundisf.S: New file: __floatunsdisf --> __floatundisf
	* libm/fplib/Files.am: Change source file name.
	* tests/simulate/fplib/ulng2flt-01.c: __floatunssisf --> __floatunsisf
	* tests/simulate/fplib/unll2flt-01.c: __floatunsdisf --> __floatundisf
	* tests/simulate/regression/bug-21872-1.c: New file.
	* tests/simulate/regression/bug-21872-2.c: New file.
	* NEWS: Note about this bug.

	* tests/simulate/progmem.h: Simplify pgm_read_qword() evaluation.

2007-12-20 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #21862: File 'bench-libm.dox' does not exist in distribution
	* doc/api/Makefile.am (EXTRA_DIST): add doc/api/bench-libm.dox.

2007-12-20  Anatoly Sokolov <aesok@post.ru>

	* configure.ac: Add 'avr35' architecture. Move AT90USB82 and 
	AT90USB162 devices to 'avr35' architecture.
	* devtools/gen-avr-lib-tree.sh (AVR_ARH_INFO): Add 'avr35' 
	architecture.
	(AVR3_DEV_INFO): Add AT90USB82 and AT90USB162 devices.
	(AVR35_DEV_INFO): New.
	(AVR5_DEV_INFO): Remove AT90USB82 and AT90USB162 devices.
	* doc/api/using-tools.dox: Document 'avr35'.

2007-12-20 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* NEWS: avr-libc 1.6 branched
	* configure.ac: bump to 1.7.0-20071220

2007-12-20 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* xml/patch-headers.py: Update for new devices and header files.
	* xml/Atmel2libc.py: More tweaks for strange Atmel XML files.
	* doc/api/vectortable.dox: Regenerate from XML.

2007-12-20 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/bench.dox: Some minor spelling and grammar fixes to
	Dmitry's fine benchmark page.

2007-12-20 Joerg Wunsch <j.gnu@uriah.heep.sax.de>
